[tool.poetry]
name = "pymty"
version = "0.1.0"
description = ""
authors = ["Joel Rivera"]

[tool.poetry.dependencies]
python = "^3.8"
CherryPy = "^18.6.1"
Mako = "^1.1.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pymty = "pymty:run"